gui/css/style-project.css
/** Project_Index & Project_Create **/
#project_index_page {
}
#project_accept_page {
}
#project_index_Header {
	position: relative;
	margin: 0;
	padding: 0;
}
#project_accept_Header {
}
#projectList_count {
	font-size: 22px;
	border-left: 8px solid #FFFF00;
	padding-left: 10px;
}
#projectList_create_new {
	position: absolute;
	top: 45px;
	right: 0;
	-moz-right: 0;
	-webkit-right: 0;
}
#projectList_create_new a, #projectList_create_new a:active, #projectList_create_new a:link, #projectList_create_new a:visited {
	background: #0054A6;
	margin: 0 12px 0 0;
	padding: 8px 16px 8px 16px;
	font-size: 10px;
	font-weight: bold;
	text-transform: uppercase;
	text-decoration: none;
	color: #FFFFFF;
}
#projectList_create_new a:hover {
	background: #00BFF3;
}
#project_accept_acceptBid {
	position: absolute;
	margin-top: 20px;
}
#project_index_Table, #projectAcceptCurrentBidsTable {
	position: relative;
	font-family: Helvetica, Arial;
	font-size: 12px;
	display: block-inline;
	width: 878px;
}
#project_index_Table tr, #projectAcceptCurrentBidsTable tr {
	margin: 0;
	padding: 0;
}
#project_index_Table tr td, #projectAcceptCurrentBidsTable tr td {
	display: inline-block;
	list-style: none;
	padding: 5px 10px;
	border-right: 2px #FFFFFF solid;
}
#project_index_Table tr td:last-child, #projectAcceptCurrentBidsTable tr td:last-child {
	border-right: 0;
}
#projectAcceptCurrentBidsTable tr td {
	font-size: 11px;
}
.projectListTableHeader, .projectAcceptCurrentBidsHeader {
	background: #00BFF3;
	border-bottom: 2px #FFFFFF solid;
}
.table_header {
	font-weight: bold;
}
.table_row {
}
.projectListTableEntry {
	margin-bottom: 1px;
	padding: 1px;
	width: 850px;
	background: #E1E1E1;
	border-bottom: 2px #FFFFFF solid;
}
.projectListTableEntry:hover {
	cursor: pointer;
}
.projectList_project_title {
	width: 200px;
	font-weight: bold;
}
.projectList_project_owner {
	width: 125px;
}
.projectList_project_status {
	width: 85px;
}
.projectList_project_budget {
	width: 95px;
}
.projectList_project_tags {
	width: 145px;
}
.projectList_project_created {
	width: 80px;
}


.projectAcceptCurrentBidsEntry {
	margin: 1px;
	padding: 1px;
}
.projectAcceptList_currentBids_name {
}
.projectAcceptList_currentBids_iteration {
	text-align: center;
}
.projectAcceptList_currentBids_price {
	width: 75px;
	text-align: center;
}
.projectAcceptList_currentBids_budget {
	width: 75px;
	text-align: center;
}
.projectAcceptList_currentBids_action {
	text-align: center;
}
.projectAcceptList_currentBids_actionSendMsg {

}
.projectAcceptList_currentBids_actionAccept {

}
.projectAcceptList_currentBids_iterationPlans {
	display: none;
}


/** Project_Bid & Project_Create **/
#project_bid_page, #create_new_project_page {
	position: relative;
}
#project_bid_Header {
}
#create_new_project_Header {
}
#project_bid_Body {
	position: relative;
}

#project_bid_projectFunction_owner {
	position: relative;
	left: 0;
	top: 0;
	margin: 0 0 0 480px;
}
#project_bid_projectFunction {
	position: absolute;
	left: 0;
	top: 0;
	margin: 0 0 0 480px;
}
#project_bid_projectDetails_owner {
	position: absolute;
	left: 0;
	top: 0;
}
#project_bid_projectDetails {
	position: relative;
}
form#projectAddBidForm, form#projectDetailsForm {
	width: 440px;
	min-height: 300px;
	height: auto;
}
form#createNewProjectForm {
}
form#projectAddBidForm fieldset, form#projectDetailsForm fieldset, form#createNewProjectForm fieldset  {
	border: none;
	margin-bottom: 10px;
}
form#projectAddBidForm fieldset:last-of-type {
	margin-bottom: 0;
}
form#projectAddBidForm fieldset fieldset, form#createNewProjectForm fieldset fieldset {
	margin-left: 180px;
}

form#projectAddBidForm legend, form#projectDetailsForm legend, form#createNewProjectForm legend, #project_accept_acceptBid {
    color: #000000;
    font-size: 16px;
    font-weight: bold;
    padding: 12px 0 10px 0px;
    text-shadow: 0 1px 1px #E2E2E2;
}
form#projectAddBidForm ol, form#projectDetailsForm ol, form#createNewProjectForm ol {	
	padding: 0;
    margin: 0;
}
form#projectAddBidForm ol li, form#projectDetailsForm ol li, form#createNewProjectForm ol li {
    position: relative;
    margin: 2px 0 2px 0px;
    line-height: 30px;
    list-style: none;
    float: left;
}
form#projectAddBidForm label, form#projectDetailsForm label, form#createNewProjectForm label {
    float: left;
    font-size: 12px;
    width: 180px;
    cursor: default;
}

.detailslabel {
	position: absolute;
	top: 0;
	left: 0;
}
.detailslabeltext {
	position: relative;
	top: 0;
	left: 0;
	margin: 2px 0 0 150px;
	font: italic 13px Georgia, "Times New Roman", Times, serif;
	padding: 5px;
	padding-left: 8px;
    width: 260px;
    min-height: 15px;
    height: auto;
    display: block;
    border-left: 2px dotted #00AEFF;
    background: #F0F0F0;
}
.ownertext {
	width: 135px;
}
.detailsowner_sendmsg {
	position: absolute;
	top: 0;
	left: 0;
	margin: 2px 0 0 305px;
	width: 120px;
	background: #797979;
    border: none;
    color: #ffffff;
    display: inline;
    font: 10px Arial, Helvetica, sans-serif;
    letter-spacing: 1px;
    padding: 6px 8px;
    border: 1px solid #797979;
    font-weight: bold;
    text-transform: uppercase;
}
.detailsowner_sendmsg:hover {
	background: #F0F0F0;
	color: #00AEFF;
	border-color: #00AEFF;
}
form#projectAddBidForm input:not([type=radio]), form#projectAddBidForm textarea, 
form#projectDetailsForm input:not([type=radio]), form#projectDetailsForm textarea,
form#createNewProjectForm input:not([type=radio]), form#createNewProjectForm textarea {
    background: #FFFFFF;
    border: 2px solid #E7E7E7;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    -khtml-border-radius: 3px;
    border-radius: 3px;
    font: italic 13px Georgia, "Times New Roman", Times, serif;
    outline: none;
    padding: 5px;
    width: 200px;
}
form#createNewProjectForm input:not([type=radio]), form#createNewProjectForm textarea {
	width: 500px;
}
form#projectAddBidForm input:not([type=submit]):focus, form#projectAddBidForm textarea:focus,
form#createNewProjectForm input:not([type=submit]):focus, form#createNewProjectForm textarea:focus {
    background: #FFFF00;
}

form#projectAddBidForm input[type=checkbox], form#createNewProjectForm input[type=checkbox] {
    float: left;
    margin: 10px 5px 0 0;
    width: 15px;
}
form#projectAddBidForm input[type=checkbox]:hover, form#createNewProjectForm input[type=checkbox]:hover {
    cursor: pointer;
}

.updatebutton {
	margin-left: 180px;
}
form#projectAddBidForm button, form#createNewProjectForm button, .updatebutton {
    background: #00AEFF;
    border: none;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    -khtml-border-radius: 8px;
    border-radius: 8px;
    color: #ffffff;
    display: inline;
    font: 12px Arial, Helvetica, sans-serif;
    letter-spacing: 1px;
    padding: 8px 35px;
    text-transform: uppercase;
}
form#projectAddBidForm button:hover, form#createNewProjectForm button:hover {
    background: #FFFF00;
    text-shadow: 0 1px 1px #FFD200;
    color: #000000;
    cursor: pointer;
}

.projectAddBid_iterationPlan {

}

